[gd_scene load_steps=3 format=2]

[ext_resource path="res://assets/pirate.obj" type="ArrayMesh" id=1]
[ext_resource path="res://scenes/Game.gd" type="Script" id=2]

[node name="Game" type="Spatial"]
script = ExtResource( 2 )

[node name="Camera" type="Camera" parent="."]
transform = Transform( 0.572229, -0.327396, 0.751909, 0, 0.916856, 0.399217, -0.820094, -0.228443, 0.524651, 2, 2.5, 3 )
current = true

[node name="TestMesh" type="MeshInstance" parent="."]
mesh = ExtResource( 1 )

[node name="Label3D" type="Label3D" parent="TestMesh"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, 0.3 )
pixel_size = 0.02
text = "0 tris"

[node name="TestMesh_Lod0" type="MeshInstance" parent="."]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 2, 0, 0 )
mesh = ExtResource( 1 )

[node name="Label3D" type="Label3D" parent="TestMesh_Lod0"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, 0.3 )
pixel_size = 0.02
text = "0 tris"

[node name="TestMesh_Lod1" type="MeshInstance" parent="."]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 4, 0, 0 )
mesh = ExtResource( 1 )

[node name="Label3D" type="Label3D" parent="TestMesh_Lod1"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, 0.3 )
pixel_size = 0.02
text = "0 tris"
